# jx3calc

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: dev.yml
app/: page.tsx
src-calc/: Cargo.toml
src-calc/src/: config.rs  frame.rs  lib.rs  main.rs
src-calc/src/frame/: enum.rs  enumeration.rs  global.rs  lua.rs
src-calc/src/frame/enum/: field.rs  fromstr.rs  reflect.rs  tostr.rs  xlua.rs
src-calc/src/frame/enum/fromstr/: attrib.rs  skill.rs  skillevent.rs
src-calc/src/frame/enum/xlua/: attribute_type.rs  normal.rs
src-calc/src/frame/global/: _mod.rs  buff.rs  cooldown.rs  equipment.rs  item.rs  skill.rs  skillevent.rs  skillrecipe.rs
src-calc/src/frame/lua/: _mod.rs  global.rs  skill.rs
src-pak/: Cargo.toml  build.rs
src-pak/lib/: pak.dll.lib
src-pak/src/: jx3pak.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/add/src/: main.rs
src/bye/: Cargo.toml  build.rs
src/bye/lib/: librepo.dylib
src/bye/src/: main.rs  repo.rs
src/bye/src/repo/: Cargo.toml
src/bye/src/repo/src/: bye.rs  mod.rs
src/hello/src/: lib.rs  main.rs
src/pak/: Cargo.toml  build.rs
src/pak/src/: jx3pak.rs  lib.rs  main.rs
