[package]
name = "pak"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
env_logger = "0.11.5"
indicatif = "0.17.9"
log = { version = "0.4.22", features = ["release_max_level_off"] }
lunify = "1.1.0"
lzham-sys = { git = "https://github.com/jx3calc/lzham-sys.git", features = [
    "static",
] }
memmap2 = "0.9.5"
mlua = { version = "0.10.2", features = ["lua51", "vendored"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["blocking"] }
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh64"] }
zstd = "0.13.2"

[features]
default = []
lib_local = []
