[package]
name = "pak"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8"
env_logger = "0.11"
log = { version = "0.4", features = ["release_max_level_error"] }
lzham-sys = { git = "https://github.com/jx3calc/lzham-sys.git", features = [
    "static",
] }
memmap2 = "0.9"
mlua = { version = "0.10", features = ["lua51", "vendored"] }
once_cell = "1.20"
reqwest = { version = "0.12", features = ["blocking"] }
xxhash-rust = { version = "0.8", features = ["xxh32", "xxh64"] }
zstd = "0.13"

[features]
default = []
lib_local = []
