[package]
name = "pak"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
encoding_rs = "0.8.35"
env_logger = "0.11.5"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["stream"] }
rust-ini = "0.21.1"
tokio = { version = "1.41.1", features = [
    "test-util",
    "fs",
    "io-std",
    "io-util",
    "macros",
    "rt",
] }
zstd = "0.13.2"

[features]
default = []
lib_local = []
